--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ gym = "^0.26.2"
 matplotlib = "^3.7.1"
 
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.0"
+autopep8 = "^2.0.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
