--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ readme = "README.md"
 python = "^3.11"
 gym = "^0.26.2"
 matplotlib = "^3.7.1"
+dash = "^2.9.1"
+dash-bootstrap-components = "^1.4.1"
+dash-mantine-components = "^0.12.0"
+dash-iconify = "^0.1.2"
+dash-extensions = "^0.1.13"
+i18n = "^0.2"
+python-i18n = "^0.3.9"
 
 
 [tool.poetry.group.dev.dependencies]
