--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,7 @@ dash-bootstrap-components = "^1.4.1"
 dash-mantine-components = "^0.12.0"
 dash-iconify = "^0.1.2"
 dash-extensions = "^0.1.13"
-i18n = "^0.2"
-python-i18n = "^0.3.9"
+python-i18n = {extras = ["yaml"], version = "^0.3.9"}
 
 
 [tool.poetry.group.dev.dependencies]
